k8s/metrics/templates/dp-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: otus-app
  template:
    metadata:
      labels:
        app: otus-app
      annotations:
        prometheus.io/scrape: 'true'
        prometheus.io/path: /api/metrics
        prometheus.io/port: '8000'
    spec:
      containers:
        - name: otus-app
          image: 100callstoeurop/otus-homework:latest
          resources:
            limits:
              memory: '128Mi'
              cpu: '500m'
          ports:
            - containerPort: 8000
