k8s/metrics/templates/ingres.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: otus-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: arch.homework
      http:
        paths:
          - path: /api/user
            pathType: Prefix
            backend:
              service:
                name: auth
                port:
                  number: 80
          - path: /api/auth
            pathType: Prefix
            backend:
              service:
                name: auth
                port:
                  number: 80
          - path: /api/billings
            pathType: Prefix
            backend:
              service:
                name: billings
                port:
                  number: 80
          - path: /api/notifications
            pathType: Prefix
            backend:
              service:
                name: notifications
                port:
                  number: 80
          - path: /api/users/[^/]+/orders(/.*)?$
            pathType: Prefix
            backend:
              service:
                name: orders
                port:
                  number: 80
          - path: /api/products
            pathType: Prefix
            backend:
              service:
                name: warehouses
                port:
                  number: 80
          - path: /api/couriers
            pathType: Prefix
            backend:
              service:
                name: deliveries
                port:
                  number: 80
  ingressClassName: nginx
